<resources>
    <string name="app_name">Quizes</string>
    <string name="pergunta">Espaço de Pergunta</string>
    <string name="alternativa_a">Resposta 1</string>
    <string name="alternativa_b">Resposta 2</string>
    <string name="alternativa_c">Resposta 3</string>
    <string name="alternativa_d">Resposta 4</string>
    <string name="texto_pergunta_1">Espaço de pergunta</string>
    <string name="texto_botao">RESPONDER</string>
</resources>