<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rbg_principal"
        android:layout_width="293dp"
        android:layout_height="245dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="208dp"
        android:layout_marginBottom="478dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192">

        <RadioButton
            android:id="@+id/rb_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao1"
            android:text="@string/alternativa_a" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13sp" />

        <RadioButton
            android:id="@+id/rb_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao1"
            android:text="@string/alternativa_b" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13sp" />

        <RadioButton
            android:id="@+id/rb_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao1"
            android:text="@string/alternativa_c" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13sp" />

        <RadioButton
            android:id="@+id/rb_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botao1"
            android:text="@string/alternativa_d" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_responder"
        android:layout_width="292dp"
        android:layout_height="53dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="157dp"
        android:background="@drawable/botao2"
        android:text="@string/texto_botao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/txvPergunta"
        android:layout_width="163dp"
        android:layout_height="75dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="41dp"
        android:text="pergunta"
        app:layout_constraintBottom_toTopOf="@+id/rbg_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>